[project]
name = "testtriage"
version = "0.1.0"
description = "AI-powered Playwright test failure analysis agent with JIRA integration"

requires-python = ">=3.11,<3.14"
dependencies = [
    "langchain-core>=1.3.3",
    "langchain-google-genai>=2.0.10",
    "langgraph>=1.0.1",
    "chromadb>=1.3.5",
    "google-genai>=1.0.0",
    "google-cloud-storage>=3.6.0",
    "slack-bolt>=1.27.0",
    "Pillow>=12.0.0",
    "jira>=3.10.5",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
testtriage = "main:main"
jira-sync = "jira_sync_to_chroma:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "agents",
    "config",
    "interfaces",
    "prompt_builder",
    "tools",
    "utils",
]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"
"jira_sync_to_chroma.py" = "jira_sync_to_chroma.py"
